--- a/lib.html
+++ b/lib.html
@@ -1,3 +1,5 @@
-<script id="petite-vue" src="https://unpkg.com/petite-vue@0.4.1" defer></script>
-<script id="tocbot" src="https://cdnjs.cloudflare.com/ajax/libs/tocbot/4.11.1/tocbot.min.js" defer></script>
+<script onload="petitevueOnload(this)" src="https://blog-static.cnblogs.com/files/blogs/707675/petite-vue@0.4.1.js"
+    defer></script>
+<script onload="tocbotOnload(this)" src="https://blog-static.cnblogs.com/files/blogs/707675/tocbot@4.11.1.js"
+    defer></script>
 <script id="mention" src="https://mention.cnblogs.com/bundles/mention.min.js" defer></script>
