style: 代码结构调整. #43

--- a/lib.html
+++ b/lib.html
@@ -2,4 +2,4 @@
     defer></script>
 <script onload="tocbotOnload(this)" src="https://blog-static.cnblogs.com/files/blogs/707675/tocbot@4.11.1.js"
     defer></script>
-<script id="mention" src="https://mention.cnblogs.com/bundles/mention.min.js" defer></script>
+<script onload="window.vm.async.mention = true" src="https://mention.cnblogs.com/bundles/mention.min.js" defer></script>
