style: 代码结构调整. #43

--- a/page_begin.html
+++ b/page_begin.html
@@ -136,24 +136,17 @@
         }
     }
 </script><script>/**
- * 代码高亮相关
- * @namespace codehighlight 
- */
-
-
-/**
- * 博客园 markdown_highlight 是异步的, 有几率会造成代码无法显示, 采取了比较trick的方式解决, 就是直接patch
- * 会在博客园调用前patch掉, 在正常调用前patch回来.
- * @memberof codehighlight
+ * markdown_highlight 是异步的, 而且没有给到应用. 使用 patch 来主动管控 markdown_highlight.
+ * @memberof global
  */
 function markdown_highlight_swap() { }
 
 /**
+ * IIFE
  * @see markdown_highlight_swap
- * @memberof codehighlight
+ * @memberof global
  */
 function stub() {
     [markdown_highlight, markdown_highlight_swap] = [markdown_highlight_swap, markdown_highlight]
 }
-stub()
-</script>
+stub()</script>
