--- a/page_end.html
+++ b/page_end.html
@@ -138,7 +138,7 @@ function GetHeader(originBody) {
     console.log(header)
     return header
 }/**
- * 主体content, 目前用于承载{@link MainPosts,Page} {@link MainPost}
+ * 主体content, 目前用于承载{MainPosts,Page} {MainPost}
  * @namespace main
  */
 
