fix: 评论内容长度过长导致 actions 换行. #62

--- a/page_begin/post.html
+++ b/page_begin/post.html
@@ -38,7 +38,8 @@
                     <div v-html="comment.user.info ?? ''"></div>
                     <div v-html="comment.content ?? ''"></div>
                 </div>
-                <div style="display:flex;flex-direction:column;" v-html="comment.actions ?? ''"></div>
+                <div style="display:flex;flex-direction:column;white-space:nowrap;" v-html="comment.actions ?? ''">
+                </div>
             </li>
         </ul>
     </template>
