--- a/layout.html
+++ b/layout.html
@@ -1,3 +1,3 @@
-<header v-scope="Header(vm.header)" class="container"></header>
+<header v-scope="Header()" class="container"></header>
 <main v-scope="Main(vm.main)" class="container"></main>
 <footer v-scope="Footer()" class="container"></footer>
