--- a/page_begin/header.html
+++ b/page_begin/header.html
@@ -2,8 +2,8 @@
 <template id="blogure-header">
     <nav style="align-items:center;">
         <hgroup style="margin-bottom:0;">
-            <h3><a :href="vm.header.url">{{ header.title }}</a></h3>
-            <h4>{{ header.subtitle }}</h4>
+            <h3><a :href="vm.header.url">{{ vm.header.title }}</a></h3>
+            <h4>{{ vm.header.subtitle }}</h4>
         </hgroup>
         <details role="list" style="margin-bottom:0;margin-left:var(--nav-element-spacing-horizontal);">
             <summary aria-haspopup="listbox" role="link">更多</summary>
@@ -12,10 +12,9 @@
     </nav>
 </template>
 <script>
-    function Header(header) {
+    function Header() {
         return {
             $template: '#blogure-header',
-            header,
         }
     }
 </script>
